--- a/FlowCode/pages/sidebar.html
+++ b/FlowCode/pages/sidebar.html
@@ -45,7 +45,25 @@
                     </select>
                     <i class="far fa-star icon-caption"></i>
                     <p>Clique na estrela embaixo do seu projeto 
-                        para adicionar aqui</p>
+                        para adicionar aqui
+                    </p>
+                </label>
+        </div>
+        <hr>
+
+        <div>
+            <div class="label-group">
+                <label class="label filtro" for="equipes">
+                    <select class="select" id="equipes>
+                                <option value="">equipes</option>
+                                <option selected disabled value="">Equipes</option>
+                                <option>equipes</option>
+                    </select>
+                    <i class="fas fa-users"></i>
+                    <button type="button" class="btn-new btn-squad"><!--btn-newsquad-->
+                        <i class="far fa-plus"></i>
+                        <p>Crie uma nova equipe</p>
+                    </button>
                 </label>
         </div>
         
