--- a/FlowCode/pages/sidebar.html
+++ b/FlowCode/pages/sidebar.html
@@ -28,7 +28,7 @@
                 <p class="p-file">Meus Arquivos</p>
             </button>
         
-            <button type="button" class="btn-new"><!--btn-newfile-->
+            <button type="button" class="btn-newfile"><!--btn-newfile-->
                 <i class="far fa-plus"></i>
                 <p>Novo arquivo</p>
             </button>
@@ -51,20 +51,28 @@
         </div>
         <hr>
 
-        <div>
-            <div class="label-group">
-                <label class="label filtro" for="equipes">
-                    <select class="select" id="equipes>
-                                <option value="">equipes</option>
-                                <option selected disabled value="">Equipes</option>
-                                <option>equipes</option>
-                    </select>
-                    <i class="fas fa-users"></i>
-                    <button type="button" class="btn-new btn-squad"><!--btn-newsquad-->
-                        <i class="far fa-plus"></i>
-                        <p>Crie uma nova equipe</p>
-                    </button>
-                </label>
+        <div class="label-group">
+            <label class="label filtro" for="equipes">
+                <select class="select" id="equipes>
+                    <option value="">equipes</option>
+                    <option selected disabled value="">Equipes</option>
+                    <option>equipes</option>
+                </select>
+                <i class="fas fa-users"></i>
+
+                <button type="button" class="btn-newsquad"><!--btn-newsquad-->
+                    <i class="far fa-plus"></i>
+                    <p>Crie uma nova equipe</p>
+                 </button>
+            </label>
+        </div>
+        <hr>
+
+        <div class="file  lixeira">
+            <button type="button" class="files">
+                <i class="fas fa-trash-alt"></i>Lixeira
+                <img src="../images/logoSemFundo (2).png" alt="">
+            </button>
         </div>
         
     </div>   
