--- a/FlowCode/pages/sidebar.html
+++ b/FlowCode/pages/sidebar.html
@@ -43,7 +43,7 @@
                                 <option selected disabled value="">Arquivos favoritos</option>
                                 <option>favoritos</option>
                     </select>
-                    <i class="far fa-star icon-caption"></i>
+                    <i class="far fa-star"></i>
                     <p>Clique na estrela embaixo do seu projeto 
                         para adicionar aqui
                     </p>
@@ -70,9 +70,14 @@
 
         <div class="file  lixeira">
             <button type="button" class="files">
-                <i class="fas fa-trash-alt"></i>Lixeira
-                <img src="../images/logoSemFundo (2).png" alt="">
+                <i class="far fa-trash-alt"></i>
+                <p class="p-lixeira">Lixeira</p>
             </button>
+        </div>
+        <hr>
+
+        <div class="file img">
+            <img src="../images/logoSemFundo (2).png" alt="">
         </div>
         
     </div>   
