--- a/FlowCode/pages/tela-arquivos.html
+++ b/FlowCode/pages/tela-arquivos.html
@@ -16,15 +16,12 @@
     <div class="gridContainer">
         <div class="gridItem navBar">
             <div class="sidebar">
-                <!-- Conteúdo do menu lateral -->
-                <button>Home</button>
-                <button>Quem Somos</button>
-                <button>Dúvidas</button>
+                <!--conteúdo sidbar-->
             </div>
               
             <i class="fas fa-bars hamburguer"></i>
    
-            <p >Encontre seus arquivos</p>
+            <p class="p-navbar">Encontre seus arquivos</p>
             <i class="fas fa-search lupa"></i>
             <i class="far fa-user-circle user"></i>
         </div>
@@ -35,7 +32,10 @@
                 Fluxograma
             </button>
 
-            <button class="btn-header fold"><i class="fas fa-folder"></i>Pasta de Arquivos</button>
+            <button class="btn-header fold">
+                <i class="fas fa-folder"></i>
+                Pasta de Arquivos
+            </button>
         </div>
 
         <div class="gridItem">
@@ -76,7 +76,7 @@
                         <i class="fas fa-project-diagram diagram-caption"></i>
                         <div class="title">
                             <h1>Título arquivo</h1>
-                            <p>editado há 2min</p>
+                            <p class="p-title">editado há 2min</p>
                         </div>
                         <div class="icons">
                             <button class="btnStar" onclick="changeColor(this)"><i class="far fa-star icon-caption"></i></button>
@@ -98,7 +98,7 @@
                         <i class="fas fa-folder diagram-caption"></i>
                         <div class="title">
                             <h1>Título arquivo</h1>
-                            <p>editado há 2min</p>
+                            <p class="p-title">editado há 2min</p>
                         </div>
                         <div class="icons">
                             <button class="btnStar" onclick="changeColor(this)"><i class="far fa-star icon-caption"></i></button>
@@ -142,7 +142,7 @@
                         <i class="fas fa-project-diagram diagram-caption"></i>
                         <div class="title">
                             <h1>Título arquivo</h1>
-                            <p>editado há 2min</p>
+                            <p class="p-title">editado há 2min</p>
                         </div>
                         <div class="icons">
                             <button class="btnStar" onclick="changeColor(this)"><i class="far fa-star icon-caption"></i></button>
@@ -164,7 +164,7 @@
                         <i class="fas fa-project-diagram diagram-caption"></i>
                         <div class="title">
                             <h1>Título arquivo</h1>
-                            <p>editado há 2min</p>
+                            <p class="p-title">editado há 2min</p>
                         </div>
                         <div class="icons">
                             <button class="btnStar" onclick="changeColor(this)"><i class="far fa-star icon-caption"></i></button>
