--- a/FlowCode/pages/tela-arquivos.html
+++ b/FlowCode/pages/tela-arquivos.html
@@ -120,7 +120,7 @@
                         <i class="fas fa-folder diagram-caption"></i>
                         <div class="title">
                             <h1>Título arquivo</h1>
-                            <p>editado há 2min</p>
+                            <p class="p-title">editado há 2min</p>
                         </div>
                         <div class="icons">
                             <button class="btnStar" onclick="changeColor(this)"><i class="far fa-star icon-caption"></i></button>
