--- a/FlowCode/pages/tela-arquivos.html
+++ b/FlowCode/pages/tela-arquivos.html
@@ -19,8 +19,9 @@
     <div class="gridContainer">
         <div class="gridItem navBar">
             <div class="containerSidebar sidebar" id="sidebar">
-                <button class="close-btn" id="closeBtn" onclick="fecharSidebar();"><i
-                        class="far fa-times-circle"></i></button>
+                <button class="close-btn" id="closeBtn" onclick="fecharSidebar();">
+                    <i class="far fa-times-circle"></i>
+                </button>
                 <button type="button" class="user-sidebar">
                     <i class="far fa-user-circle"></i>
                     <p class="p-user">Usarname</p>
