--- a/FlowCode/pages/tela-arquivos.html
+++ b/FlowCode/pages/tela-arquivos.html
@@ -136,7 +136,7 @@
 
                 <label for="fileInput" class="custom-button">
                     <i class="fas fa-folder-plus"></i>
-                    Carregar arquivo
+                    Importar Arquivo
                 </label>
                 <input type="file" id="fileInput" name="fileInput">
             </div>
