--- a/FlowCode/pages/tela-arquivos.html
+++ b/FlowCode/pages/tela-arquivos.html
@@ -135,7 +135,7 @@
                 </label>
 
                 <label for="fileInput" class="custom-button">
-                    <i class="fas fa-folder-plus"></i>
+                    <i class="fas fa-download"></i>
                     Importar Arquivo
                 </label>
                 <input type="file" id="fileInput" name="fileInput">
